# poetry-plugin-dotenv

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml  justfile  pyproject.toml
.github/: .codecov.yaml  FUNDING.yaml  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  labels.yaml
.github/ISSUE_TEMPLATE/: ---bug-report.yaml  ---documentation.yaml  ---feature-request.yaml  bug_report.md  config.yaml  feature_request.md
.github/actions/changes/: action.yaml
.github/actions/detect-changes/: action.yaml
.github/actions/setup-env/: action.yaml
.github/actions/setup-environment/: action.yaml
.github/config/: slack.yaml
.github/workflows/: .tests-matrix.yaml  cd.yaml  ci.yaml  codeql.yaml  dependency-review.yaml  labels.yaml  linters.yaml  lock-threads.yaml  release.yaml  stale-branches..yaml  stale-pr.yaml  tests.yaml
docs/: conf.py
docs/assets/: demo.tape
docs/examples/: .env  .env.dev  .env.prod  demo.tape  main.py
docs/examples/configs/: pyproject.toml  pyproject_ignore.toml  pyproject_location.toml
src/poetry_dotenv/: __init__.py  dotenv.py  plugin.py
src/poetry_dotenv/dotenv/: __init__.py  core.py  parsers.py  variables.py
src/poetry_plugin_dotenv/: __init__.py  commands.py  config.py  configurator.py  exceptions.py  loader.py  logger.py  logging.py  plugin.py
src/poetry_plugin_dotenv/dotenv/: __init__.py  core.py  parsers.py  variables.py
tests/: conftest.py  test_config.py  test_configurator.py  test_plugin.py  test_plugin_os_config.py  test_plugin_toml_config.py
tests/dotenv/: test_core.py  test_parsers.py  test_variables.py
