[tool.poetry]
name = "poetry-plugin-dotenv"
version = "3.3.2"
description = "poetry-plugin-dotenv - is the plugin that automatically loads environment variables from a dotenv file into the environment before poetry commands are run."
license = "MIT"
authors = ["Volodymyr Pivoshenko <contact@pivoshenko.dev>"]
maintainers = ["Volodymyr Pivoshenko <contact@pivoshenko.dev>"]
keywords = [
  "config",
  "configuration",
  "configuration-management",
  "cross-platform",
  "dotenv",
  "env",
  "hacktoberfest",
  "plugin",
  "plugins",
  "poetry",
  "poetry-plugin",
  "poetry-plugins",
  "pypi",
  "python"
]
homepage = "https://github.com/pivoshenko/poetry-plugin-dotenv"
documentation = "https://github.com/pivoshenko/poetry-plugin-dotenv"
repository = "https://github.com/pivoshenko/poetry-plugin-dotenv"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Other Environment",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Natural Language :: English"
]
packages = [{ include = "poetry_plugin_dotenv", from = "src" }]

[tool.poetry.urls]
"Issues" = "https://github.com/pivoshenko/poetry-plugin-dotenv/issues"
"Releases" = "https://github.com/pivoshenko/poetry-plugin-dotenv/releases"

[tool.poetry.dependencies]
poetry = ">=1.5.0,<3.0.0"
python = "~=3.9,<4.0"

[tool.poetry.group.formatters.dependencies]
pyupgrade = "~=3.21.0"
ruff = "~=0.15.8"

[tool.poetry.group.linters.dependencies]
ruff = "~=0.15.8"
ty = "~=0.0.17,<0.0.24"

[tool.poetry.group.tests.dependencies]
coverage = { version = "~=7.10.7", extras = ["toml"] }
pytest = "~=7.4.4"
pytest-cov = "~=7.1.0"
pytest-mock = "~=3.15.1"
pytest-sugar = "~=1.1.1"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-plugin-dotenv = "poetry_plugin_dotenv.plugin:DotenvPlugin"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0,<3.0.0"]

[tool.coverage.run]
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
addopts = ["--basetemp=tests/fixtures", "--color=yes", "--cov=src", "--cov-report=term-missing"]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
invalid-yield = "ignore"
unresolved-attribute = "ignore"

[tool.ruff]
fix = true
line-length = 100
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
ignore = ["D107", "D102", "D103", "D203", "D213", "COM812"]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"docs/examples/main.py" = ["INP001", "T201"]
"src/poetry_plugin_dotenv/__init__.py" = ["E501"]
"src/poetry_plugin_dotenv/plugin.py" = ["ARG002", "ANN002", "ANN003"]
"src/poetry_plugin_dotenv/dotenv/variables.py" = ["ARG002", "ANN002", "ANN003"]
"tests/*.*" = ["INP001", "S101"]
